Change pause/play button on click

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 				<a href="#" id="href-fire" onclick="gradient_fire();return false;">
 					<span class="icon-fire"></span>
 				</a>
-				<a href="#" id="href-pause" onclick="gradient_pause();return false;">
-					<span class="icon-pause"></span>
+				<a href="#" id="href-pause" class="choise" onclick="gradient_pause();return false;">
+					<span class="icon-pause" id="status_play"></span>
 				</a>
 				<a href="#" id="href-clear" class="choise" onclick="gradient_clear();return false;">
 					<span class="icon-clear"></span>
