--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Gradient Animation</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Indie+Flower">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower">
 		<link href="Vidage/styles/Vidage.css" rel="stylesheet" />
 		<link href="gradient_animation.css" rel="stylesheet" />
 		<script src="Vidage/scripts/Vidage.js"></script>
